# platanus-hack-26-ar-team-27

./: .env.example  .env.local.example  .gitignore  AGENTS.md  COLLABORATION.md  IMPLEMENTATION_PLAN.md  README.md  cli.py  gtm_mvp.db  next.config.mjs  package.json  platanus-hack-project.json  pnpm-lock.yaml  project-description.md  pyproject.toml  render.yaml  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260509_1701_0003_owned_domain_pool.py
app/: main.py
app/agents/: base.py  domain_purchase.py  gtm_diagnostic.py  runner.py
app/api/: companies.py  domains.py
app/clients/: mailgun.py
app/core/: safety.py  settings.py
app/db/: models.py  session.py
app/prompts/: domain_purchase.md  warmup_lite.md
app/schemas/: __init__.py  research.py  warmup.py
app/services/: diagnostic_service.py  domain_service.py  seed_real_domains.py  warmup_service.py
app/tools/: bootstrap.py  registry.py
backend/: .env.example  README.md  alembic.ini  cli.py  pyproject.toml
backend/alembic/: env.py
context/: instrucciones_agente_comprador_dominios_porkbun_gtm.md  instrucciones_agente_gtm_b2b_mvp.md  instrucciones_agente_research_envio_gtm.md  instrucciones_agente_warmup_lite_mailgun_gtm.md  prompt_claude_code_implementacion_sistema_gtm.md
docs/: OPERATIONS.md
examples/: demo_seed_emails.json
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
gtm_b2b_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: smoke-test-creative.ts
tests/: conftest.py
(+178 files in other folders)
