[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtm-b2b-mvp"
version = "0.1.0"
description = "Multi-agent GTM B2B MVP: diagnose → buy domains → DNS → warmup → research → send"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Platanus Hack Team 27" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "anthropic>=0.40",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
gtm-cli = "cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
# B008: Typer/FastAPI use `Depends(...)` / `typer.Option(...)` in defaults by design.
# UP006/UP035: keep `List[...]` style allowed in places SQLAlchemy/Pydantic require it.
ignore = ["E501", "B008", "B904", "B905", "UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
